# laoshi-ai

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF_NOTE.md  README.md  agent.py  chainlit.md  chainlit_app.py  developement-workflow.md  dictionary.py  docker-compose.yml  hsk_selector.py  initial_implementation.md  pyproject.toml  utils.py
.chainlit/: config.toml
.github/: copilot-instructions.md
.github/hooks/: ruff-format-check.json
.github/skills/feature-dev/: SKILL.md  implementation-checklist.md  test-template.md  user-story-template.md
.github/workflows/: ci.yml
tests/: conftest.py  test_agent.py  test_dictionary.py  test_hsk_selector.py  test_utils.py
tests/fixtures/: sample_cedict.u8
