[project]
name = "laoshi-ai"
version = "0.1.0"
description = "Conversational Chinese language learning AI tutor for English speakers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-classic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "pypinyin>=0.51.0",
    "chainlit>=1.3.0",
    "python-dotenv>=1.0.0",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.ruff.lint.per-file-ignores]
"agent.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
